Completed logic for hangman game

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
 <body>
     <!--for testing only-->
-    <p>Score: </p>
+    <p>Attempt: 7</p>
     <h2></h2>
     <!-- <div id="letters"></div>
      <div id="wordbox"></div> -->
+     <p id="result"></p>
     <script src="hangman.js"></script>
 </body>
 
