score + restart button

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 </head>
 
 <body>
+    <p id="result">Score: 0</p>
     <!--for testing only-->
-    <p>Attempt: 7</p>
+    <p id="attempt">Attempt: 7</p>
     <h2></h2>
+    <button id="restart" onclick="restart()">Restart</button>
     <!-- <div id="letters"></div>
      <div id="wordbox"></div> -->
-     <p id="result"></p>
     <script src="hangman.js"></script>
 </body>
 
