--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
-    <p id="result">Score: 0</p>
-    <!--for testing only-->
+    <p id="score">Score: 0</p>
     <p id="attempt">Attempt: 7</p>
+    <p id="messageToPlayer"></p>
+    <p id="hintForPlayer"></p>
     <h2></h2>
     <button id="restart" onclick="restart()">Restart</button>
     <!-- <div id="letters"></div>
