added hint button
added hint button, make a lot of changes

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <p id="score">Score: 0</p>
     <p id="attempt">Attempt: 7</p>
     <p id="messageToPlayer"></p>
-    <p id="hintForPlayer"></p>
+    <p id="hintForPlayer">Definition: [click hint button]</p>
     <h2></h2>
     <button id="restart" onclick="restart()">Restart</button>
-    <!-- <div id="letters"></div>
-     <div id="wordbox"></div> -->
+    <button id="hint" onclick="hint()">Hint</button>
     <script src="hangman.js"></script>
+
 </body>
 
 </html>
