--- a/index.html
+++ b/index.html
@@ -10,15 +10,10 @@
 </head>
 
 <body>
-    <p id="score">Score: 0</p>
-    <p id="attempt">Attempt: 7</p>
-    <p id="messageToPlayer"></p>
-    <p id="hintForPlayer">Definition: [click hint button]</p>
+    <!--for testing only-->
+    <p>Score: </p>
     <h2></h2>
-    <button id="restart" onclick="restart()">Restart</button>
-    <button id="hint" onclick="hint()">Hint</button>
     <script src="hangman.js"></script>
-
 </body>
 
 </html>
