--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 </head>
 
 <body>
-    <!--for testing only-->
-    <p>Score: </p>
+    <p id="score">Score: 0</p>
+    <p id="attempt">Attempt: 7</p>
+    <p id="messageToPlayer"></p>
+    <p id="hintForPlayer">Definition: [click hint button]</p>
     <h2></h2>
+    <button id="restart" onclick="restart()">Restart</button>
+    <button id="hint" onclick="hint()">Hint</button>
     <script src="hangman.js"></script>
+
 </body>
 
 </html>
