change js file, when user win disable buttons

--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
     <p id="score">Score: 0</p>
     <p id="attempt">Attempt: 7</p>
     <p id="messageToPlayer"></p>
-    <p id="hintForPlayer"></p>
-    <h2 id="hiddenword"></h2>
+    <p id="hintForPlayer">Definition: [click hint button]</p>
+    <h2></h2>
     <button id="restart" onclick="restart()">Restart</button>
     <button id="hint" onclick="hint()">Hint</button>
-    <div id="imgs"></div>
-    <div id="btns"></div>
-    <!-- <div id="letters"></div>
-     <div id="wordbox"></div> -->
     <script src="hangman.js"></script>
+
 </body>
 
 </html>
